Fix: dropdown menu z-index

--- a/www/Views/src/scss/back.scss
+++ b/www/Views/src/scss/back.scss
@@ -26,13 +26,15 @@ header {
     position: absolute;
     right: 1.5rem;
     top: 70px;
+    z-index: 2;
+    background-color: $white;
 
     a {
       color: $text-black;
       padding: 10px 20px;
 
       &:hover {
-        background: darken($white, 20);
+        background-color: darken($white, 20);
       }
     }
   }
